# cirno

./: Cargo.toml  README.md  README_RU.md
.github/workflows/: build.yml  crates.yml
cirno/: Cargo.toml
cirno/src/: claping.rs  display.rs  localisation.rs  main.rs
cirno_store/: Cargo.toml
cirno_store/src/: lib.rs
