
[workspace]
members = ["cirno", "cirno_store"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/cirno"
license = "MIT"
description = "Motivational phrases in Japanese and Russian to brighten your day"
keywords = ["motivation", "japanese", "russian", "phrases", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[workspace.dependencies]


[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 24
panic = 'abort'
strip = true
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
